# real-time-guitar-chord-recognition-system

./: .gitignore  CMakeLists.txt  README.md  mbed_app.json  ssd1331.cpp  test_cmsis_dsp.cpp
docs/: architecture.md  hardware.md
guitar_ML/: README.md  collect_data.py  features.py  requirements.txt  run_inference.py  serial_io.py  test_fft.py  test_microphone.py  test_oled.py  train_model.py
